# mumble

./: .cirrus.yml
cmake/: compiler.cmake
overlay_gl/: CMakeLists.txt
scripts/azure-pipelines/: build_macos.bash  install-environment_macos.bash
scripts/travis-ci/: script.bash
src/mumble/: main.cpp  mumble.pro
